# alphagen

./: .gitignore  README.md  backtest.py  dso.py  example_config.json  futures_specs.json  gp.py  pyproject.toml  test_config.json
alphagen/: __init__.py
alphagen/data/: __init__.py
alphagen/models/: __init__.py
alphagen/rl/: __init__.py
alphagen/rl/env/: __init__.py
alphagen/trade/: __init__.py  strategy.py
alphagen_generic/: __init__.py
alphagen_llm/: __init__.py
alphagen_llm/client/: openai_client.py
alphagen_llm/prompts/: __init__.py
alphagen_qlib/: __init__.py  stock_data.py  utils.py
data_collection/: fetch_baostock_data.py
scripts/: llm_only.py  llm_test_validity.py  report.py  rl.py
