[project]
name = "alphagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baostock==0.8.8",
    "fire",
    "gym==0.26.2",
    "loguru>=0.7.3",
    "matplotlib>=3.5.0,<3.7.0",
    "num2words",
    "numpy>=1.22.0,<1.25.0",
    "openai==1.2.3",
    "pandas>=1.5.0,<1.6.0",
    "pyqlib>=0.9.7",
    "requests>=2.34.0",
    "sb3-contrib==2.0.0",
    "shimmy==1.1.0",
    "stable-baselines3==2.0.0",
    "torch==2.0.1",
]
