[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagen"
version = "0.1.0"
description = "Alpha mining and trading system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.18.21",
    "baostock==0.8.8",
    "dataclasses-json>=0.6.7",
    "fire",
    "gym==0.26.2",
    "httpx<0.28.0",
    "loguru>=0.7.3",
    "matplotlib>=3.5.0,<3.7.0",
    "num2words",
    "numpy>=1.22.0,<1.25.0",
    "openai==1.2.3",
    "pandas>=1.5.0,<1.6.0",
    "plotly>=6.7.0",
    "pyqlib>=0.9.7",
    "requests>=2.34.0",
    "sb3-contrib==2.0.0",
    "shimmy==1.1.0",
    "stable-baselines3==2.0.0",
    "tensorboard>=2.20.0",
    "tokentrim>=0.1.13",
    "torch>=2.1.0,<2.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["alphagen*", "dso*", "gplearn*"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]
